--- a/App/Views/AJAX/ket_qua_tra_cuu_cach_xung_ho.html
+++ b/App/Views/AJAX/ket_qua_tra_cuu_cach_xung_ho.html
@@ -3,7 +3,7 @@
         <p>Đối tượng 1:</p>
         {% if hoSo1 is not null %}
             {% if hoSo1.HinhAnh %}
-            <img src="/images/AnhHoSo/{{hoSo1.HinhAnh}}">
+            <img src="/images/AnhHoSo/{{hoSo1.HinhAnh}}" style="width: 200px">
             {% else %}
             <img src="/images/user.png" alt="">
             {% endif %}
@@ -26,7 +26,7 @@
         <p>Đối tượng 2:</p>
         {% if hoSo2 is not null %}
             {% if hoSo2.HinhAnh %}
-            <img src="/images/AnhHoSo/{{hoSo2.HinhAnh}}">
+            <img src="/images/AnhHoSo/{{hoSo2.HinhAnh}}" style="width: 200px">
             {% else %}
             <img src="/images/user.png" alt="">
             {% endif %}
