--- a/App/Views/BaiViet/chinh_sua_bai_viet.html
+++ b/App/Views/BaiViet/chinh_sua_bai_viet.html
@@ -28,7 +28,7 @@ Chỉnh sửa bài viết
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
-                    <form action="#" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
+                    <form action="/admin/bai-viet/{{baiViet.MaBaiViet}}/cap-nhat" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
 
                         <div class="form-group">
                             <label class="control-label col-md-3 col-sm-3 col-xs-12">Chọn loại tin
