--- a/App/Views/base_user.html
+++ b/App/Views/base_user.html
@@ -183,7 +183,7 @@
 
 <footer style="background-color: #1b6d85; height: 50px;">
     <div class="container">
-        <p style="line-height: 50px; color: #FFFFFF; float: none; padding-left: .5em">C - Gia phả Họ Nguyễn Hữu 2017</p>
+        <p style="line-height: 50px; color: #FFFFFF; float: none; padding-left: .5em">© Gia phả Họ Nguyễn Hữu 2017 - Thực hiện: Nguyễn Hữu Tý</p>
     </div>
 </footer>
 <script src="/js/jquery.min.js"></script>
