--- a/App/Views/BaiViet/viet_bai.html
+++ b/App/Views/BaiViet/viet_bai.html
@@ -43,7 +43,7 @@ Viết bài
                                 <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <textarea name="noiDung" style="width: 100%" rows="10">{{post.noiDung}}</textarea>
+                                <textarea name="noiDung" style="width: 100%" rows="10" required>{{post.noiDung}}</textarea>
                             </div>
                         </div>
                         <div class="form-group">
