--- a/App/Views/User/BaiViet/chi_tiet_bai_viet.html
+++ b/App/Views/User/BaiViet/chi_tiet_bai_viet.html
@@ -2,7 +2,22 @@
 {% block title %}
 Trang chủ
 {% endblock %}
+{% block css %}
+<meta property="og:url"           content="/" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Gia Phả" />
+<meta property="og:description"   content="Website Quản Lý Gia Phả Họ Nguyễn Hữu" />
+<meta property="og:image"         content="/" />
+{% endblock %}
 {% block body %}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.11&appId=184090695473517';
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <script src="/js/amlich-hnd.js" type="text/javascript"></script>
 <section class="content clearfix">
     <div class="container">
@@ -16,6 +31,16 @@ Trang chủ
             </ul>
         </div>
         <div class="col-9" style="padding-right: 1em">
+            <div class="fb-like"
+                 data-href="/"
+                 data-layout="standard"
+                 data-action="like"
+                 data-show-faces="true">
+            </div>
+            <div class="fb-share-button"
+                 data-href="https://www.your-domain.com/your-page.html"
+                 data-layout="button_count">
+            </div>
             <h3>{{baiViet.TieuDe}}</h3>
             <small><i>{{baiViet.name}}</i> - Ngày viết: {{baiViet.NgayDuaTin|date("d/m/Y")}}</small>
             <div class="thumb">
@@ -24,6 +49,7 @@ Trang chủ
             <div>
                 {{baiViet.NoiDung | raw }}
             </div>
+            <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
         </div>
         <div class="col-3 block-border">
             {% for baiViet in dsBaiViet|slice(0, 5) %}
