--- a/App/Views/User/index.html
+++ b/App/Views/User/index.html
@@ -17,6 +17,78 @@ Trang chủ
         font-size: 1em;
         background: linear-gradient(to bottom, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
     }
+    /* The Modal (background) */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    /* Cay gia pha gan */
+    .hopTo {
+        padding: 0.5em;
+        width: 20rem;
+        text-align: center;
+        vertical-align: middle;
+        background-image: url('/images/phado.gif');
+        overflow: hidden;
+    }
+
+    .hopNho {
+        padding: 0.5em;
+        text-align: center;
+        vertical-align: middle;
+        position: relative;
+        background-image: url('/images/phado.gif');
+        overflow: hidden;
+        border-left: 1px solid white;
+        border-right: 1px solid white;
+    }
+    .wrapper {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+    }
+
+    .wrapper .oneOfThree {
+        width: 33.33%;
+    }
+
+    .wrapper .twoOfThree {
+        width: 66.66%;
+    }
 </style>
 <link rel="stylesheet" href="/css/clndr.css">
 {% endblock %}
@@ -79,21 +151,22 @@ Trang chủ
         </div>
         <div class="col-3 clearfix">
             <script>
-                var mockData = [{
-                    "ngayGio": "2015-11-29"
-                    },
-                    {
-                        "ngayGio": "2017-09-20"
-                    },
-                    {
-                        "ngayGio": "2014-06-15"
-                    },
-                    {
-                        "ngayGio": "2015-01-10"
-                    },
-                    {
-                        "ngayGio": "2015-02-23"
-                    }
+                var mockData = [
+//                    {
+//                    "ngayGio": "2015-11-11"
+//                    },
+//                    {
+//                        "ngayGio": "2017-09-20"
+//                    },
+//                    {
+//                        "ngayGio": "2014-06-15"
+//                    },
+//                    {
+//                        "ngayGio": "2015-01-10"
+//                    },
+//                    {
+//                        "ngayGio": "2015-02-23"
+//                    }
                 ];
                 var getJSON = function(url, callback) {
                     var xhr = new XMLHttpRequest();
@@ -113,10 +186,11 @@ Trang chủ
                     mockData = data.data;
                 });
                 setTimeout(function () {
-                    console.log(mockData);
-                }, 1000);
-                setOutputSize("small");
-                showVietCal();
+//                    setOutputSize("small");
+                    showVietCal();
+//                    console.log(mockData);
+                }, 2000);
+
             </script>
             <table align="center" cellspacing="1" border="0" style="padding-left: 1em">
                 <tr>
@@ -156,8 +230,6 @@ Trang chủ
                         </form>
 
                         <script type="text/javascript">
-
-
                             for (var i = mockData.length - 1; i >= 0; i--) {
                                 var timestamp = Date.parse(mockData[i].ngayGio)
                                 if (isNaN(timestamp) == false) {
@@ -165,7 +237,6 @@ Trang chủ
                                     console.log(d.getDate() + "/" + d.getMonth());
                                 }
                             }
-
                             getSelectedMonth();
                             document.SelectMonth.month.value = currentMonth;
                             document.SelectMonth.year.value = currentYear;
@@ -173,19 +244,80 @@ Trang chủ
                             function viewMonth(mm, yy) {
                                 window.location = window.location.pathname + '?yy=' + yy + '&mm=' + mm;
                             }
-
-                            // function viewYear(yy) {
-                            // 	var loc = 'currentyear.html?yy=' + yy;
-                            // 	var win2702 = window.open(loc, "win2702", "menubar=yes,scrollbars=yes,resizable=yes");
-                            // }
                         </script>
-
                     </td>
                 </tr>
-
             </table>
+            <div id="recent-view">
+                <p>Xem gần đây</p>
+                {% for item in dsXemGanDay|reverse  %}
+                <div class="view-item block-border">
+                    <div style="width: 40px; margin-right: .5em" class="thumbnail-img"><img src="/images/AnhBaiViet/camera.png" alt="" style="width: 100%"></div>
+                    <div class="info">
+                        <input type="hidden" class="maHoSo" value="{{item.MaHoSo}}">
+                        <a href="#" onclick="showInfo(this);return false;">{{item.HoTen}}</a>
+                        <br>
+                        <small style="font-weight: normal; color: red;">Đời thứ {{item.DoiThu}} - Con thứ {{item.ConThu}}</small>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h3>Xem kết quả tra cứu xưng hô</h3>
+                <div id="mainContent">
+                </div>
+            </div>
+        </div>
 
+        <script>
+            function showInfo(button) {
+                var maHoSo = $(button).prevAll(".maHoSo").val();
+                console.log(maHoSo);
+                $("html, body").animate(
+                    { scrollTop: "220px" },
+                    {
+                        complete : function(){
+                        }
+                    }
+                );
+                modal.style.display = "block";
+                openPage("api/ajax/index?maHoSo=" + maHoSo);
+            }
+            function openPage(url) {
+                if (url.indexOf("?") == -1) {
+                    url = url + "?";
+                }
+                var encodedUrl = encodeURI(url);
+                $("#mainContent").load(encodedUrl);
+                //noinspection JSUnresolvedFunction,JSUnresolvedFunction,JSValidateTypes
+                $("body").scrollTop(0);
+//        history.pushState(null, null, url);
+            }
+            function addTraCuuXungHo(maHoSo) {
+                var encodedUrl = encodeURI("tra-cuu-xung-ho/add/" + maHoSo);
+                $("#status").load(encodedUrl);
+                $("body").scrollTop(0);
+            }
+            function xemKetQuaTraCuuCachXungHo() {
+                var encodedUrl = encodeURI("user/tracuuxungho/getAllDoiTuong");
+                $("#mainContent2").load(encodedUrl);
+                $("body").scrollTop(0);
+            }
+        </script>
+        <div id="modal2" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h3>Xem kết quả tra cứu xưng hô</h3>
+                <div id="mainContent2">
+                </div>
 
+                <br>
+            </div>
         </div>
         <div>
             <div id="su-kien">
@@ -219,6 +351,28 @@ Trang chủ
                 </a>
             </div>
         </div>
+        <script>
+            var btnTraCuuXungHo = document.getElementById("btnTraCuuXungHo");
+            btnTraCuuXungHo.onclick = function () {
+                xemKetQuaTraCuuCachXungHo();
+                modal2.style.display = "block";
+            }
+            var modal = document.getElementById('myModal');
+            var span = document.getElementsByClassName("close")[0];
+            var span2 = document.getElementsByClassName("close")[1];
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+            span2.onclick = function() {
+                modal2.style.display = "none";
+            }
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                    modal2.style.display = "none";
+                }
+            }
+        </script>
     </div>
 </section>
 {% endblock %}
