--- a/public/css/style.css
+++ b/public/css/style.css
@@ -752,3 +752,107 @@ max-width: 576px) {
 .block-border:hover {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.24);
 }
+#recent-view {
+    padding-left: 1em;
+}
+.view-item {
+    display: block;
+    height: 60px;
+}
+.view-item .info {
+    float: left;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+.thumbnail-img {
+    float: left;
+}
+.hopTo {
+    padding: 0.5em;
+    width: 20rem;
+    text-align: center;
+    vertical-align: middle;
+    background-image: url('/images/phado.gif');
+    overflow: hidden;
+}
+
+.hopNho {
+    padding: 0.5em;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+    background-image: url('/images/phado.gif');
+    overflow: hidden;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 99999; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media (max-width: 576px) {
+
+}
+
+.item-search {
+    float: left;
+    width: 100%;
+    border: 1px solid #1ABB9C;
+    border-radius: 3px;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
+    transition: all 200ms ease-out;
+    padding: .25em;
+    margin-bottom: .5em;
+}
+.item-search:hover {
+    box-shadow: 0 0 6px rgba(35, 173, 255, 1);
+}
+.wrapper {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.wrapper .oneOfThree {
+    width: 33.33%;
+}
+
+.wrapper .twoOfThree {
+    width: 66.66%;
+}
